--- a/2511/practice.css
+++ b/2511/practice.css
@@ -2,6 +2,23 @@ section{
     margin: 100px;
 }
 
+/* flex練習 */
+
+.box-wrap {
+    display: flex;
+    /* background-color: rosybrown; */
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.box {
+    width: 100%;
+    height: 200px;
+    background-color: rgb(255, 232, 182);
+}
+
+/* display練習 */
+
 .products {
     margin: 10px 0;
     font-size: 0px;
